# bootstrap

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  BUILD.gn  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  VERIFY_AUTOMERGE.md  math.kl  test.kl
.github/workflows/: auto-merge.yml  ci.yml  lint.yml  release.yml  validate.yml  verify-merge-bot.yml
.opencode/plans/: cpp-rejected-proposals.md
assets/brand/: README.md
compiler/: README.md
compiler/backend/compiler/: BUILD.gn  bytecode_emitter.cc  bytecode_emitter.h  compiler.cc  compiler.h  dense_array_lit.cc  dense_array_lit.h  expr_width.cc  expr_width.h
compiler/backend/vm/: BUILD.gn  chunk.cc  chunk.h  numeric.cc  numeric.h  value.cc  value.h
compiler/driver/kinglet/: cli_driver.cc  cli_internal.h  cli_spawn.cc  cli_spawn.h  cli_ui.cc  cmd_build.cc  cmd_build.h  cmd_fmt.cc  cmd_fmt.h  cmd_init.cc  cmd_init.h  cmd_prune.cc  cmd_prune.h  cmd_run.cc  cmd_run.h  main.cc
compiler/driver/pipeline/: BUILD.gn  pipeline.cc  pipeline.h
compiler/driver/preen/: BUILD.gn  config.cc  config.h  emitter.cc  emitter.h  extension.cc  extension.h  fmt_lexer.cc  fmt_lexer.h  preen.cc  preen.h  span_map.cc  span_map.h  token_trivia.cc  token_trivia.h  trivia.cc  trivia.h
compiler/frontend/ast/: BUILD.gn  ast.cc  ast.h  pipe_desugar.cc
compiler/frontend/checker/: BUILD.gn  type_checker.cc  type_checker.h
compiler/frontend/lexer/: BUILD.gn  scanner.cc  scanner.h  token.cc  token.h
compiler/frontend/module/: BUILD.gn  module_id.cc  module_id.h  module_loader.cc  module_loader.h  native_symbol.cc  native_symbol.h  nest_parser.cc  nest_parser.h  nest_parser_test.cc  project_config.cc  project_config.h
compiler/frontend/parser/: BUILD.gn  completion_context.h  parse_decl.cc  parse_expr.cc  parse_stmt.cc  parse_type.cc  parser.cc  parser.h  parser_internal.h
compiler/frontend/sema/: BUILD.gn  semantic_context.cc  semantic_context.h
compiler/frontend/types/: BUILD.gn  numeric.cc  numeric.h  type_id.h  types.cc  types.h
compiler/ir/: BUILD.gn  ir_builder.cc  ir_builder.h  kir.cc  kir.h  kir_container.cc  kir_container.h  kir_field_resolve.cc  kir_field_resolve.h  kir_numeric.cc  kir_numeric.h  kir_recorder.cc  kir_recorder.h  kir_specialize.cc  kir_typing.cc
docs/: BUILD.md  bootstrap-selfhost-alignment.md
docs/changelog/: v0.0.4.md  v0.0.5.md  v0.0.6.md
editors/tree-sitter/: grammar.js  package.json
editors/tree-sitter/queries/: highlights.scm
editors/vscode/: README.md  extension.js  kinglet-icon-theme.json  kinglet.tmLanguage.json  package-lock.json  package.json
runtime/: BUILD.gn  kinglet_rt.h  kinglet_rt_agg.cc  kinglet_rt_enum.cc  kinglet_rt_internal.h  kinglet_rt_main.cc  kinglet_rt_map.cc  kinglet_rt_mem.cc  kinglet_rt_native.cc  kinglet_rt_num.cc  kinglet_rt_string.cc  kinglet_rt_value.h
scripts/: bootstrap.ps1  bootstrap.sh  install.sh  stage-klet-alias.ps1  stage-klet-alias.sh
scripts/hooks/: README.md  check_comments.py  check_commit_msg.py  commit-msg  format_commit_body.py  install.sh  pre-commit
src/: README.md
src/ast/: BUILD.gn  ast.cc  ast.h  pipe_desugar.cc
src/checker/: BUILD.gn  type_checker.cc  type_checker.h
src/codegen/llvm/: BUILD.gn  kir_to_llvm.cc  kir_to_llvm.h
src/compiler/: BUILD.gn  bytecode_emitter.cc  bytecode_emitter.h  compiler.cc  compiler.h  dense_array_lit.cc  dense_array_lit.h  expr_width.cc  expr_width.h
src/ir/: BUILD.gn  ir_builder.cc  ir_builder.h  kir.cc  kir.h  kir_container.cc  kir_container.h  kir_field_resolve.cc  kir_numeric.cc  kir_numeric.h  kir_recorder.cc  kir_recorder.h  kir_specialize.cc  kir_specialize.h  kir_typing.cc  kir_typing.h
src/kinglet/: cli_driver.cc  cli_driver.h  main.cc  vm_main.cc
src/lexer/: scanner.cc  scanner.h  token.cc  token.h
src/lsp/: analysis.cc  analysis.h  completion_context.h  completion_resolver.cc  completion_resolver.h  completion_token.cc  lsp_server.cc  lsp_server.h  protocol.h  server.cc  transport.cc
src/lsp_server/: BUILD.gn
src/module/: BUILD.gn  module_id.cc  module_loader.cc  module_loader.h  native_symbol.cc  nest_parser.cc  nest_parser.h  nest_parser_test.cc  project_config.cc  project_config.h
src/parser/: completion_context.h  parser.cc  parser.h
src/preen/: BUILD.gn  config.cc  config.h  emitter.cc  emitter.h  extension.cc  extension.h  fmt_lexer.cc  fmt_lexer.h  preen.cc  preen.h  span_map.cc  span_map.h  token_trivia.cc  token_trivia.h  trivia.cc  trivia.h
src/types/: BUILD.gn  numeric.cc  numeric.h  types.cc  types.h
src/vm/: BUILD.gn  chunk.cc  chunk.h  cow.cc  cow.h  numeric.cc  value.cc  value.h  vm.cc  vm.h
tests/: README.md  common.sh  lsan.supp  run_all.sh
tests/abi/cross_module_struct/: kinglet.nest  main.kl  pair.kl  run.sh
tests/bench/: baseline.txt  run.sh
tests/cli/: README.md  run_golden.sh
tests/cli/cases/: array_methods.kl  container_array_index.kl  error_handling.expected  error_handling.kl  fixed_width_i32_wrap.kl  fixed_width_kir.kl  fixed_width_narrowing.kl  fixed_width_types.kl  generic_field_index.kl  generic_infer.kl  generic_struct_infer.kl  impl_basic.expected  impl_basic.kl  io_methods.kl  map_array_type.kl  map_basic.kl  map_symbol_table.kl  match_binding.kl  match_bool_non_exhaustive.kl  match_duplicate_enum_warn.kl  match_enum_destruct.kl  match_enum_payload_partial.kl  match_exhaustive_ok.kl  match_exhaustive_warn.kl  match_int_non_exhaustive.kl  match_nullable_missing_null.kl  match_struct_partial.kl  nullable_type.kl  pipeline.kl  trait_basic.expected  trait_basic.kl  trait_default.kl  try_catch.kl  using_system_selective.kl
tests/codegen/: run.sh
tests/codegen/cases/: arrays_bytecode.kl
tests/exec/: run.sh
tests/exec/cases/: array_insert.expected  array_insert.kl  array_methods.expected  array_methods.kl  (+93 more)
tests/fmt/: run_golden.sh
tests/harness/: directives.md  run.sh
tests/ir/: run.sh
tests/lsp/: completion_driver.py
tests/module/: run.sh
tests/nest/: run_golden.sh
tests/parser/: run.sh
tests/probe/: run_matrix.sh
tests/sema/: run.sh
tests/tools/: fix_migrated_cases.py  migrate_cli_cases.py
(+133 files in other folders)
