import("//build/embed.gni")
import("//build/llvm.gni")

group("default") {
  deps = [
    ":kinglet",
    ":kinglet-lsp",
    ":kinglet-vm",
    "//runtime:kinglet_rt",
  ]
  if (enable_llvm) {
    deps += [ "//src/codegen/llvm:llvm_codegen" ]
  }
}

if (embed_compiler_path != "") {
  action("embedded_compiler_cc") {
    script = "//build/scripts/embed_binary.py"
    inputs = [ embed_compiler_path ]
    outputs = [ "$target_gen_dir/embedded_compiler.cc" ]
    args = [
      rebase_path(embed_compiler_path, root_build_dir),
      rebase_path("$target_gen_dir/embedded_compiler.cc", root_build_dir),
    ]
  }
}

executable("kinglet") {
  sources = [
    "src/kinglet/main.cc",
  ]

  deps = [
    "//src/checker",
    "//src/compiler",
    "//src/ir",
    "//src/lexer",
    "//src/module",
    "//src/parser",
    "//src/vm",
  ]

  if (enable_llvm) {
    deps += [
      "//runtime:kinglet_rt",
      "//src/codegen/llvm:llvm_codegen",
    ]
    configs += [ "//src/codegen/llvm:llvm" ]
  }

  if (embed_compiler_path != "") {
    sources += [ "$target_gen_dir/embedded_compiler.cc" ]
    deps += [ ":embedded_compiler_cc" ]
    defines = [ "KINGLET_HAVE_EMBEDDED_COMPILER=1" ]
  }

  include_dirs = [
    "//src",
  ]
}

executable("kinglet-lsp") {
  sources = [
    "src/lsp_server/main.cc",
  ]

  deps = [
    "//src/checker",
    "//src/lexer",
    "//src/lsp",
    "//src/parser",
  ]

  include_dirs = [
    "//src",
  ]
}

executable("kinglet-vm") {
  sources = [
    "src/kinglet/vm_main.cc",
  ]

  deps = [
    "//src/vm",
  ]

  include_dirs = [
    "//src",
  ]
}
