import("//build/embed.gni")
import("//build/llvm.gni")

_kinglet_defines = [ "KINGLET_VERSION=\"${kinglet_version}\"" ]

group("default") {
  deps = [
    ":kinglet",
    "//runtime:kinglet_rt",
  ]
  if (enable_llvm) {
    deps += [ "//compiler/backend/codegen/llvm:llvm_codegen" ]
  }
}

if (embed_compiler_path != "") {
  action("embedded_compiler_cc") {
    script = "//build/scripts/embed_binary.py"
    inputs = [ embed_compiler_path ]
    outputs = [ "$target_gen_dir/embedded_compiler.cc" ]
    args = [
      rebase_path(embed_compiler_path, root_build_dir),
      rebase_path("$target_gen_dir/embedded_compiler.cc", root_build_dir),
    ]
  }
}

executable("kinglet") {
  sources = [
    "compiler/driver/kinglet/cli_driver.cc",
    "compiler/driver/kinglet/main.cc",
  ]

  defines = _kinglet_defines

  deps = [
    "//compiler/frontend/checker",
    "//compiler/backend/compiler",
    "//compiler/ir",
    "//compiler/frontend/lexer",
    "//compiler/frontend/module",
    "//compiler/frontend/parser",
    "//compiler/driver/pipeline",
    "//compiler/driver/preen",
    "//compiler/backend/vm",
  ]

  if (enable_llvm) {
    deps += [
      "//runtime:kinglet_rt",
      "//compiler/backend/codegen/llvm:llvm_codegen",
    ]
    configs += [ "//compiler/backend/codegen/llvm:llvm" ]
  }

  if (embed_compiler_path != "") {
    sources += [ "$target_gen_dir/embedded_compiler.cc" ]
    deps += [ ":embedded_compiler_cc" ]
    defines = [ "KINGLET_HAVE_EMBEDDED_COMPILER=1" ]
  }

  include_dirs = [
    "//compiler",
  ]
}
