static_library("kinglet_rt") {
  sources = [
    "kinglet_rt_main.cc",
    "kinglet_rt_string.cc",
    "kinglet_rt_agg.cc",
    "kinglet_rt_enum.cc",
    "kinglet_rt_native.cc",
    "kinglet_rt_num.cc",
  ]

  public = [
    "kinglet_rt.h",
    "kinglet_rt_value.h",
  ]

  include_dirs = [
    "//",
  ]
}
