static_library("kinglet_rt") {
  sources = [
    "kinglet_rt_main.cc",
    "kinglet_rt_string.cc",
    "kinglet_rt_agg.cc",
    "kinglet_rt_enum.cc",
    "kinglet_rt_native.cc",
    "kinglet_rt_num.cc",
    "kinglet_rt_map.cc",
    "kinglet_rt_mem.cc",
  ]

  public = [
    "kinglet_rt.h",
    "kinglet_rt_value.h",
  ]

  include_dirs = [
    "//",
  ]

  # Runtime library is linked into JIT-compiled user programs at runtime.
  # It must not carry sanitizer or coverage instrumentation, because the
  # JIT linker has no sanitizer or profiling runtime available.
  configs -= [
    "//build/config:sanitizer",
    "//build/config:coverage",
  ]
}
