static_library("compiler") {
  sources = [
    "bytecode_emitter.cc",
    "bytecode_emitter.h",
    "compiler.cc",
    "compiler.h",
    "expr_width.cc",
    "expr_width.h",
  ]

  deps = [
    "//src/ast",
    "//src/ir",
    "//src/module",
    "//src/types",
    "//src/vm",
  ]

  include_dirs = [
    "//src",
  ]
}
