static_library("ir") {
  sources = [
    "ir_builder.cc",
    "ir_builder.h",
    "kir.cc",
    "kir.h",
    "kir_recorder.cc",
    "kir_recorder.h",
    "kir_typing.cc",
    "kir_typing.h",
    "kir_numeric.cc",
    "kir_numeric.h",
    "kir_specialize.cc",
    "kir_specialize.h",
  ]

  deps = [
    "//src/ast",
    "//src/types",
    "//src/vm",
  ]

  include_dirs = [
    "//src",
  ]
}
