static_library("module") {
  sources = [
    "module_loader.cc",
    "module_loader.h",
    "nest_parser.cc",
    "nest_parser.h",
    "project_config.cc",
    "project_config.h",
  ]

  deps = [
    "//src/ast",
    "//src/lexer",
    "//src/parser",
  ]

  include_dirs = [
    "//src",
  ]
}

executable("nest_parser_test") {
  sources = [ "nest_parser_test.cc" ]
  deps = [ ":module" ]
  include_dirs = [ "//src" ]
}
