static_library("preen") {
  sources = [
    "config.cc",
    "config.h",
    "emitter.cc",
    "emitter.h",
    "extension.cc",
    "extension.h",
    "fmt_lexer.cc",
    "fmt_lexer.h",
    "preen.cc",
    "preen.h",
    "trivia.cc",
    "trivia.h",
  ]

  deps = [
    "//src/ast",
    "//src/lexer",
    "//src/module",
    "//src/parser",
  ]

  include_dirs = [
    "//src",
  ]
}
