static_library("checker") {
  sources = [
    "type_checker.cc",
    "type_checker.h",
  ]

  deps = [
    "//compiler/frontend/ast",
    "//compiler/ir",
    "//compiler/frontend/module",
    "//compiler/frontend/types",
    "//compiler/frontend/sema",
  ]

  include_dirs = [
    "//compiler",
  ]
}
